--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,7 +1,10 @@
 # List the start up tasks. Learn more https://www.gitpod.io/docs/config-start-tasks/
 tasks:
-  - init: npm install
-    command: npm run dev
+  - name: Dependencies and build
+    init: |
+      npm install
+      npm start
+    command: npm run build  
 
 # List the ports to expose. Learn more https://www.gitpod.io/docs/config-ports/
 ports:
